# VChat

./: .gitignore  CMakeLists.txt  README.md  help.md
VChat-Client/: CMakeLists.txt
VChat-Client/include/: chat.h  dashboard.h  data.hpp  error.h  net.h  personalinfo.h  store.h
VChat-Client/src/: chat.cpp  dashboard.cpp  error.cpp  main.cpp  net.cpp  personalinfo.cpp  store.cpp
VChat-Client/ui/: chat.ui  dashboard.ui  error.ui  personalinfo.ui
VChat-Server/: CMakeLists.txt  sqlite.sql
VChat-Server/include/: common.h  connection.h  server.h  service.h  singleton_crtp.h  store.h
VChat-Server/include/data/: data.hpp  store.h
VChat-Server/include/net/: connection.h  server.h
VChat-Server/src/: connection.cpp  main.cpp  server.cpp  service.cpp  store.cpp
VChat-Server/src/data/: store.cpp
VChat-Server/src/net/: connection.cpp  server.cpp
VChat-Server/src/service/: service.cpp
protobuf/: generate.sh  vchat.proto
